[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/com.indicainkwell.iosdeploy/gui/settings_menu.gd" type="Script" id=1]
[ext_resource path="res://addons/com.indicainkwell.iosdeploy/gui/_v3/title_box.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/com.indicainkwell.iosdeploy/resources/fonts/_v3/body_font.tres" type="DynamicFont" id=3]

[node name="settings_menu" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -301.5
margin_top = -185.0
margin_right = 301.5
margin_bottom = 185.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="General" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 593.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="title_box" parent="MarginContainer/General" instance=ExtResource( 2 )]
margin_right = 583.0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/General"]
margin_top = 50.0
margin_right = 583.0
margin_bottom = 60.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/General"]
margin_top = 64.0
margin_right = 583.0
margin_bottom = 89.0
size_flags_horizontal = 3

[node name="open_onboarding_flow_butt" type="Button" parent="MarginContainer/General/HBoxContainer"]
margin_right = 289.0
margin_bottom = 25.0
hint_tooltip = "Setup provisioning profile, team, app bundle, and app display name. "
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Open Onboarding Flow"

[node name="fill_godot_export_presets" type="Button" parent="MarginContainer/General/HBoxContainer"]
margin_left = 293.0
margin_right = 583.0
margin_bottom = 25.0
hint_tooltip = "This will fill the settings set from \"Onboarding Flow\" to the first \"iOS Export\" entry from Godot > Project > Export."
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Fill Godot Export Presets"

[node name="xcodeproj_box" type="HBoxContainer" parent="MarginContainer/General"]
margin_top = 93.0
margin_right = 583.0
margin_bottom = 118.0

[node name="open_xcproj_butt" type="Button" parent="MarginContainer/General/xcodeproj_box"]
margin_right = 289.0
margin_bottom = 25.0
hint_tooltip = "Open the xcode project in Finder that this plugin uses for building."
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Open Xcode Project"

[node name="copy_xcproj_butt" type="Button" parent="MarginContainer/General/xcodeproj_box"]
margin_left = 293.0
margin_right = 583.0
margin_bottom = 25.0
hint_tooltip = "Copies the path to the xcode project this plugin uses to build."
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "Copy Xcode Project Path"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/General"]
visible = false
margin_top = 122.0
margin_right = 583.0
margin_bottom = 132.0
custom_constants/separation = 10

[node name="remote_debug_butt" type="CheckButton" parent="MarginContainer/General"]
visible = false
margin_top = 122.0
margin_right = 583.0
margin_bottom = 162.0
hint_tooltip = "Make sure to turn it on in Debug > Deploy with remote debug"
custom_fonts/font = ExtResource( 3 )
text = "Deploy with remote debug"

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/General"]
margin_top = 122.0
margin_right = 583.0
margin_bottom = 132.0
custom_constants/separation = 10

[node name="log_level_box" type="HBoxContainer" parent="MarginContainer/General"]
margin_top = 136.0
margin_right = 583.0
margin_bottom = 161.0

[node name="Label" type="Label" parent="MarginContainer/General/log_level_box"]
margin_top = 3.0
margin_right = 130.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "Set Logging Level: "

[node name="log_level_opt" type="OptionButton" parent="MarginContainer/General/log_level_box"]
margin_left = 134.0
margin_right = 583.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "VERBOSE"
items = [ "VERBOSE", null, false, -1, null, "DEBUG", null, false, -1, null, "INFO", null, false, -1, null, "WARN", null, false, -1, null, "ERROR", null, false, -1, null ]
selected = 0

[node name="log_file_box" type="HBoxContainer" parent="MarginContainer/General"]
margin_top = 165.0
margin_right = 583.0
margin_bottom = 194.0

[node name="Label" type="Label" parent="MarginContainer/General/log_file_box"]
margin_top = 5.0
margin_right = 119.0
margin_bottom = 24.0
custom_fonts/font = ExtResource( 3 )
text = "Set Logging File: "

[node name="logfile_path" type="LineEdit" parent="MarginContainer/General/log_file_box"]
margin_left = 123.0
margin_right = 496.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
context_menu_enabled = false
placeholder_text = "path/to/logfile"

[node name="select_file_butt" type="Button" parent="MarginContainer/General/log_file_box"]
margin_left = 500.0
margin_right = 583.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "Select File"

[node name="FileDialog" type="FileDialog" parent="MarginContainer/General/log_file_box/select_file_butt"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -942.0
margin_top = -124.0
margin_right = -745.0
margin_bottom = -18.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Users/prestonknopp/Repositories/godot-ios-deploy"
current_path = "/Users/prestonknopp/Repositories/godot-ios-deploy/"

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/General"]
margin_top = 198.0
margin_right = 583.0
margin_bottom = 208.0
custom_constants/separation = 10

[node name="set_deploy_tool" type="HBoxContainer" parent="MarginContainer/General"]
margin_top = 212.0
margin_right = 583.0
margin_bottom = 237.0

[node name="Label" type="Label" parent="MarginContainer/General/set_deploy_tool"]
margin_top = 3.0
margin_right = 117.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 3 )
text = "Set Deploy Tool: "

[node name="deploy_tool_opt" type="OptionButton" parent="MarginContainer/General/set_deploy_tool"]
margin_left = 121.0
margin_right = 583.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "libimobiledevice"
items = [ "libimobiledevice", null, false, -1, null, "ios-deploy", null, false, -1, null ]
selected = 0

[node name="iosdeploy_tool" type="HBoxContainer" parent="MarginContainer/General"]
margin_top = 241.0
margin_right = 583.0
margin_bottom = 270.0

[node name="Label" type="Label" parent="MarginContainer/General/iosdeploy_tool"]
margin_top = 5.0
margin_right = 142.0
margin_bottom = 24.0
hint_tooltip = "Set the path to the ios-deploy tool. It is a single binary file. If installed with homebrew it defaults to /usr/local/bin/ios-deploy."
custom_fonts/font = ExtResource( 3 )
text = "Set ios-deploy path: "

[node name="iosdeploy_tool_path" type="LineEdit" parent="MarginContainer/General/iosdeploy_tool"]
margin_left = 146.0
margin_right = 496.0
margin_bottom = 29.0
hint_tooltip = "Set the path to the ios-deploy tool. It is a single binary file. If installed with homebrew it defaults to /usr/local/bin/ios-deploy."
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "/usr/local/bin/ios-deploy"
context_menu_enabled = false

[node name="select_file_butt" type="Button" parent="MarginContainer/General/iosdeploy_tool"]
margin_left = 500.0
margin_right = 583.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "Select File"

[node name="FileDialog" type="FileDialog" parent="MarginContainer/General/iosdeploy_tool/select_file_butt"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -942.0
margin_top = -124.0
margin_right = -745.0
margin_bottom = -18.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Users/prestonknopp/Repositories/godot-ios-deploy"
current_path = "/Users/prestonknopp/Repositories/godot-ios-deploy/"

[node name="libimobiledevice_tool" type="HBoxContainer" parent="MarginContainer/General"]
margin_top = 274.0
margin_right = 583.0
margin_bottom = 303.0

[node name="Label" type="Label" parent="MarginContainer/General/libimobiledevice_tool"]
margin_top = 5.0
margin_right = 176.0
margin_bottom = 24.0
hint_tooltip = "libimobile device has multiple tools such as: idevice_info, idevice_id, idevice_installer, etc. These tools a typically kept in a single folder. If installed with homebrew, these tools will be in the /usr/local/bin folder."
custom_fonts/font = ExtResource( 3 )
text = "Set libimobile base path: "

[node name="libimobiledevice_tool_path" type="LineEdit" parent="MarginContainer/General/libimobiledevice_tool"]
margin_left = 180.0
margin_right = 496.0
margin_bottom = 29.0
hint_tooltip = "libimobile device has multiple tools such as: idevice_info, idevice_id, idevice_installer, etc. These tools a typically kept in a single folder. If installed with homebrew, these tools will be in the /usr/local/bin folder."
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "/usr/local/bin"
context_menu_enabled = false

[node name="select_file_butt" type="Button" parent="MarginContainer/General/libimobiledevice_tool"]
margin_left = 500.0
margin_right = 583.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "Select File"

[node name="FileDialog" type="FileDialog" parent="MarginContainer/General/libimobiledevice_tool/select_file_butt"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -942.0
margin_top = -124.0
margin_right = -745.0
margin_bottom = -18.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Users/prestonknopp/Repositories/godot-ios-deploy"
current_path = "/Users/prestonknopp/Repositories/godot-ios-deploy/"

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/General"]
margin_top = 307.0
margin_right = 583.0
margin_bottom = 317.0
custom_constants/separation = 10

[node name="custom_godot_bin" type="HBoxContainer" parent="MarginContainer/General"]
margin_top = 321.0
margin_right = 583.0
margin_bottom = 350.0

[node name="Label" type="Label" parent="MarginContainer/General/custom_godot_bin"]
margin_top = 5.0
margin_right = 179.0
margin_bottom = 24.0
hint_tooltip = "A custom compiled godot binary to deploy with instead of the binary that comes with godot's export templates."
custom_fonts/font = ExtResource( 3 )
text = "Set custom godot binary: "

[node name="godot_bin_path" type="LineEdit" parent="MarginContainer/General/custom_godot_bin"]
margin_left = 183.0
margin_right = 496.0
margin_bottom = 29.0
hint_tooltip = "A custom compiled godot binary to deploy with instead of the binary that comes with godot's export templates."
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
context_menu_enabled = false
placeholder_text = "/path/to/binary"

[node name="select_file_butt" type="Button" parent="MarginContainer/General/custom_godot_bin"]
margin_left = 500.0
margin_right = 583.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 3 )
text = "Select File"

[node name="FileDialog" type="FileDialog" parent="MarginContainer/General/custom_godot_bin/select_file_butt"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -942.0
margin_top = -124.0
margin_right = -745.0
margin_bottom = -18.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Users/prestonknopp/Repositories/godot-ios-deploy"
current_path = "/Users/prestonknopp/Repositories/godot-ios-deploy/"
[connection signal="pressed" from="MarginContainer/General/HBoxContainer/open_onboarding_flow_butt" to="." method="_on_open_onboarding_flow_butt_pressed"]
[connection signal="pressed" from="MarginContainer/General/HBoxContainer/fill_godot_export_presets" to="." method="_on_fill_godot_export_presets_pressed"]
[connection signal="pressed" from="MarginContainer/General/xcodeproj_box/open_xcproj_butt" to="." method="_on_open_xcproj_butt_pressed"]
[connection signal="pressed" from="MarginContainer/General/xcodeproj_box/copy_xcproj_butt" to="." method="_on_copy_xcproj_butt_pressed"]
[connection signal="pressed" from="MarginContainer/General/log_file_box/select_file_butt" to="MarginContainer/General/log_file_box/select_file_butt/FileDialog" method="popup_centered"]
[connection signal="file_selected" from="MarginContainer/General/log_file_box/select_file_butt/FileDialog" to="MarginContainer/General/log_file_box/logfile_path" method="set_text"]
[connection signal="pressed" from="MarginContainer/General/iosdeploy_tool/select_file_butt" to="MarginContainer/General/iosdeploy_tool/select_file_butt/FileDialog" method="popup_centered"]
[connection signal="file_selected" from="MarginContainer/General/iosdeploy_tool/select_file_butt/FileDialog" to="MarginContainer/General/iosdeploy_tool/iosdeploy_tool_path" method="set_text"]
[connection signal="pressed" from="MarginContainer/General/libimobiledevice_tool/select_file_butt" to="MarginContainer/General/libimobiledevice_tool/select_file_butt/FileDialog" method="popup_centered"]
[connection signal="file_selected" from="MarginContainer/General/libimobiledevice_tool/select_file_butt/FileDialog" to="MarginContainer/General/libimobiledevice_tool/libimobiledevice_tool_path" method="set_text"]
[connection signal="pressed" from="MarginContainer/General/custom_godot_bin/select_file_butt" to="MarginContainer/General/custom_godot_bin/select_file_butt/FileDialog" method="popup_centered"]
[connection signal="file_selected" from="MarginContainer/General/custom_godot_bin/select_file_butt/FileDialog" to="MarginContainer/General/custom_godot_bin/godot_bin_path" method="set_text"]
